# spreadsheet-normalisation

./: .gitignore  DOCUMENTATION.md  README.md  create_sample_data.py  demo.py  dump  llm_normalizer.py  main.py  pyproject.toml  requirements.txt  setup.py  spreadsheet_compressor.py  test_system.py  utils.py
